--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
 	<version>1.0.0</version>
 	<name>Platform</name>
 
+	<properties>
+		<requiredCodeCoverage>0.80</requiredCodeCoverage>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -65,6 +69,13 @@
 			<artifactId>rules</artifactId>
 			<version>1.0.0</version>
 			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.ulfric.botch</groupId>
+			<artifactId>botch</artifactId>
+			<version>1.0.0</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
