Implement plugin, and commands

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.ulfric.andrew</groupId>
+			<artifactId>andrew</artifactId>
+			<version>1.0.0</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>com.ulfric.botch</groupId>
 			<artifactId>botch</artifactId>
 			<version>1.0.0</version>
