--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,20 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.ulfric.embargo</groupId>
+			<artifactId>embargo</artifactId>
+			<version>1.0.0</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.ulfric.data</groupId>
+			<artifactId>data</artifactId>
+			<version>1.0.0</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>com.ulfric.botch</groupId>
 			<artifactId>botch</artifactId>
 			<version>1.0.0</version>
