--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.ulfric.palpatine</groupId>
+			<artifactId>palpatine</artifactId>
+			<version>1.0.0</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>com.ulfric.botch</groupId>
 			<artifactId>botch</artifactId>
 			<version>1.0.0</version>
