--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Platform
-main: com.ulfric.platform.Platform
+main: com.ulfric.plugin.platform.PlatformPlugin
 version: 1.0.0
-author: Ulfric Projects
+author: Ulfric LLC
 load: STARTUP
